--- a/treehouse/CSS_Layout/css_layout_4.html
+++ b/treehouse/CSS_Layout/css_layout_4.html
@@ -39,7 +39,9 @@
 		<div class="primary col">
 			<h2>Great food</h2>
 
+			<!-- Feautred Image -->
 			<figure>
+				<img class="icon-location" src="img/location.svg" alt="location">
 				<img class="feat-img" src="img/treats.svg" alt="Drinks and eats">
 				<figcaption>
 					<h4>Featured Drinks &amp; Eats!</h4>
